# local-llm-toolkit

./: .gitignore  LICENSE  README.md  agent-loop-test.py  apply-systemd-override.sh  bench-cpu.sh  bench-exl3.sh  bench-gptoss-ik.sh  bench-hybrid.sh  bench-ms4-reason.sh  bench.sh  compare-exl3-candidates.sh  compare-mistral.sh  compare-ornith.sh  config.env.example  convert-ornith-exl3.sh  download-exl3-candidates.sh  download-mistral-compare.sh  download-model.sh  eval-coding-hard.py  eval-coding-quality.py  eval-quality-run.sh  llm  needle-recall.py  refactor-ab.sh  refactor-eval.py  setup-14b-q6.sh  setup-30b-moe-q4.sh  setup-cpu.sh  setup-exl3.sh  setup-ollama.sh  start-bonsai-server.sh  start-cpu-server.sh  start-gptoss-server.sh  start-hyb-server.sh  start-kanana-server.sh  start-ollama-server.sh  start-tabby-server.sh
agent/: goose-web.sh  mcp-test.mjs  package-lock.json  package.json  searxng.example.yml  start-browser-mcp.sh
docs/: findings.md  how-to.md  setup.md
docs/systemd/: README.md  llm-browser-mcp.service  llm-openwebui.service  llm-searxng.service
exl3/: convert.py
lib/: cpu-common.sh  exl3-common.sh  llm_chat.py  register-ollama.sh
llm-panel-rs/: Cargo.toml
llm-panel-rs/src/: main.rs
nvfp4-poc/: serve-nvfp4.sh
patches/: qwen3.6-thinking-off.diff
profiles/30b-moe-q4/: a-safe.sh  b-aggressive.sh
profiles/cpu-agent/: a-moe-q8.sh  a-moe.sh  b-light.sh  planner-32b.sh
profiles/qwen3-coder-30b-exl3/: a-safe.sh  b-quality.sh  c-cline.sh  d-qwen36-35b.sh  e-ornith.sh
